# PhD-studies

./: README.md  pyproject.toml
src/gelnet_studies/: EDA.ipynb  postprocessing.py
src/gelnet_studies/data/ba_conditional_hamiltonian/: ba_conditional_hamiltonian.csv
src/gelnet_studies/data/extended_experiments/: edge_matched_model_7_all.csv  scores_model_1_rep_1.csv  scores_model_1_rep_10.csv  scores_model_1_rep_100.csv  scores_model_1_rep_11.csv  scores_model_1_rep_12.csv  scores_model_1_rep_13.csv  scores_model_1_rep_14.csv  scores_model_1_rep_15.csv  scores_model_1_rep_16.csv  scores_model_1_rep_17.csv  scores_model_1_rep_18.csv  scores_model_1_rep_19.csv  scores_model_1_rep_2.csv  scores_model_1_rep_20.csv  scores_model_1_rep_21.csv  scores_model_1_rep_22.csv  scores_model_1_rep_23.csv  scores_model_1_rep_24.csv  scores_model_1_rep_25.csv  scores_model_1_rep_26.csv  scores_model_1_rep_27.csv  scores_model_1_rep_28.csv  scores_model_1_rep_29.csv  scores_model_1_rep_3.csv  scores_model_1_rep_30.csv  scores_model_1_rep_31.csv  scores_model_1_rep_32.csv  scores_model_1_rep_33.csv  scores_model_1_rep_34.csv  scores_model_1_rep_35.csv  scores_model_1_rep_36.csv  scores_model_1_rep_37.csv  scores_model_1_rep_38.csv  scores_model_1_rep_39.csv  scores_model_1_rep_4.csv  scores_model_1_rep_40.csv  scores_model_1_rep_41.csv  scores_model_1_rep_42.csv  scores_model_1_rep_43.csv  (+565 more)
src/gelnet_studies/data/paper_experiments/: paper_summary.csv  (+600 more)
src/graphstudies/: compute_laplacian.py  define_model.py  gen_data.py  regularize.graph.py
src/graphstudies/pgmpy/: util.py
(+6 files in other folders)
